[front] fix label not showing in red for error fields

--- a/front/src/components/system/index.module.css
+++ b/front/src/components/system/index.module.css
@@ -231,9 +231,9 @@
   flex: 1;
 }
 
-.errorLabel,
-.errorLabel:hover,
-.errorLabel:focus {
+.errorLabel > span,
+.errorLabel:hover > span,
+.errorLabel:focus > span {
   color: var(--red-dark);
 }
 
